--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "private" : "true",
   "dependencies" : {
   	"express" : "3.0.2",
-  	"request" : "*"
+  	"request" : "*",
+  	"debug" : "*"
   }
 }
