--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies" : {
   	"express" : "3.0.2",
   	"request" : "*",
-  	"debug" : "*"
+  	"debug" : "*",
+  	"replify" : "*"
   }
 }
